fixed overflow from nav

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1264,7 +1264,7 @@ footer {
       text-align: center;
     }
     nav {
-      visibility: hidden;
+      display: none;
     }
     #page-logo {
       width: 70px;
